<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_app">Add Application</string>
    <string name="add_app_size">No more than 4 applications can be added , please reselect.</string>
    <string name="als_id7_main_app">Application</string>
    <string name="als_id7_main_browser">Browser</string>
    <string name="als_id7_main_settings">Settings</string>
    <string name="als_id7_music">Music</string>
    <string name="als_id7_music_player">Music player</string>
    <string name="als_id7_phone">Phone</string>
    <string name="als_id7_wranning">Your operation is too frequent. Please let go and operate!</string>
    <string name="apk360_title">360APK</string>
    <string name="app_aux">AUX</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_dtv">DTV</string>
    <string name="app_dvr">DVR</string>
    <string name="app_fcam">@string/function_fcam</string>
    <string name="app_name">KswCarProject</string>
    <string name="app_not_update">Upgrade not allowed!</string>
    <string name="app_ok">OK</string>
    <string name="audi_apps">@string/ksw_id7_apps</string>
    <string name="audi_browser">@string/id6_browser</string>
    <string name="audi_bt">@string/ug_bluetooth</string>
    <string name="audi_car">@string/ksw_id7_car</string>
    <string name="audi_dashboard">@string/ksw_id7_dashboard_lable</string>
    <string name="audi_easyconnection">@string/id6_shouj_hulian</string>
    <string name="audi_factory_home_right_option1">Hide</string>
    <string name="audi_factory_home_right_option2">Display Weather Or AMAP Navigation Information</string>
    <string name="audi_factory_home_right_option3">Display Weather Information</string>
    <string name="audi_factory_home_right_option4">Display Car Information</string>
    <string name="audi_factory_home_right_option5">Display Music Information</string>
    <string name="audi_home_left_widget">Widget in the left side of the homepage</string>
    <string name="audi_home_right_widget">Widget in the right side of the homepage</string>
    <string name="audi_music">@string/ksw_id7_music</string>
    <string name="audi_navi">@string/ksw_id7_navi</string>
    <string name="audi_set_12hour">@string/text_6</string>
    <string name="audi_set_24hour">@string/text_7</string>
    <string name="audi_set_360_camera">@string/shext_3</string>
    <string name="audi_set_android_time">@string/text_5</string>
    <string name="audi_set_back_brightness">@string/set_text6</string>
    <string name="audi_set_back_camera">@string/shext_1</string>
    <string name="audi_set_back_camera_type">后视摄像头类型</string>
    <string name="audi_set_car_camera">@string/shext_2</string>
    <string name="audi_set_car_time">@string/text_4</string>
    <string name="audi_set_eq_bass">@string/eq_text7</string>
    <string name="audi_set_eq_classical">@string/eq_text6</string>
    <string name="audi_set_eq_dance">@string/eq_text3</string>
    <string name="audi_set_eq_jazz">@string/eq_text5</string>
    <string name="audi_set_eq_mezzo">@string/eq_text8</string>
    <string name="audi_set_eq_popular">@string/eq_text2</string>
    <string name="audi_set_eq_rock">@string/eq_text4</string>
    <string name="audi_set_eq_treble">@string/eq_text9</string>
    <string name="audi_set_eq_user">@string/eq_text1</string>
    <string name="audi_set_item_eq_text">@string/item4</string>
    <string name="audi_set_item_factory_text">@string/item9</string>
    <string name="audi_set_item_language_text">@string/item5</string>
    <string name="audi_set_item_more_text">@string/item8</string>
    <string name="audi_set_item_navi_text">@string/item2</string>
    <string name="audi_set_item_sound_text">@string/item3</string>
    <string name="audi_set_item_sysinfo_text">@string/item7</string>
    <string name="audi_set_item_system_text">@string/item1</string>
    <string name="audi_set_item_time_text">@string/item6</string>
    <string name="audi_set_sound_call_volume">@string/voic_3</string>
    <string name="audi_set_sound_hz_ms">@string/voic_1</string>
    <string name="audi_set_sound_media_volume">@string/voic_2</string>
    <string name="audi_set_sound_navi_volume">@string/voic_5</string>
    <string name="audi_set_sound_yc_ms">@string/voic_4</string>
    <string name="audi_set_speed_unit">@string/function_text24</string>
    <string name="audi_set_sync_time">@string/text_2</string>
    <string name="audi_set_sys_info_app_ver">@string/text_9</string>
    <string name="audi_set_sys_info_mcu_ver">@string/text_8</string>
    <string name="audi_set_sys_info_muc_updata">@string/text_11</string>
    <string name="audi_set_sys_info_nanndflash">@string/text_15</string>
    <string name="audi_set_sys_info_ram">@string/text_14</string>
    <string name="audi_set_sys_info_restore_factory">@string/text_12</string>
    <string name="audi_set_sys_info_system_ver">@string/text_10</string>
    <string name="audi_set_temp_unit">Unit Of Temperature</string>
    <string name="audi_set_time_zhishi">@string/text_3</string>
    <string name="audi_setting">@string/ksw_id7_setting</string>
    <string name="audi_system_brightness_auto">@string/function_text21</string>
    <string name="audi_system_brightness_day">@string/set_text6</string>
    <string name="audi_system_brightness_night">夜间亮度</string>
    <string name="audi_system_car_aux1">@string/set_caraux1</string>
    <string name="audi_system_car_aux2">@string/set_caraux2</string>
    <string name="audi_video">@string/video</string>
    <string name="bc_apps_btn_text">Android Apps</string>
    <string name="boot_record_mode">Remember The Last Mode</string>
    <string name="boot_record_mode_radio1">Enable</string>
    <string name="boot_record_mode_radio2">To OEM System</string>
    <string name="boot_record_mode_radio3">To Android Homepage</string>
    <string name="function_bt">BT</string>
    <string name="function_fcam">F_CAM</string>
    <string name="function_google_off">Zlink</string>
    <string name="function_text1">USB HOST</string>
    <string name="function_text10">CVBS DVR</string>
    <string name="function_text11">USB DVR</string>
    <string name="function_text12">Bluetooth Selection</string>
    <string name="function_text13">OEM Bluetooth</string>
    <string name="function_text14">Android Bluetooth</string>
    <string name="function_text15">Amplifier Selection</string>
    <string name="function_text16">OEM Amplifier</string>
    <string name="function_text17">Aftermarket Amplifier</string>
    <string name="function_text18">360 Camera</string>
    <string name="function_text19">CVBS Camera</string>
    <string name="function_text20">VGA Camera</string>
    <string name="function_text21">Automatic Brightness</string>
    <string name="function_text22">Width Lamp Control</string>
    <string name="function_text23">Close</string>
    <string name="function_text24">Unit Selection</string>
    <string name="function_text25">Metric Unit</string>
    <string name="function_text26">Imperial Unit</string>
    <string name="function_text3">Google Apps</string>
    <string name="function_text4">AUX</string>
    <string name="function_text5">DTV</string>
    <string name="function_text6">Dashboard</string>
    <string name="function_text7">Txzing Assistant</string>
    <string name="function_text8">DVR</string>
    <string name="function_text9">Close</string>
    <string name="id6_apps_mess">Get More Apps</string>
    <string name="id6_filemanager">File Manager</string>
    <string name="id6_filemanager_mess">Management the files</string>
    <string name="id6_setting_mess">System Function Settings</string>
    <string name="id6_shouj_hulian">PhoneLink</string>
    <string name="id6_shouj_hulian_mess">Phone Mirroring</string>
    <string name="ksw_id7_apps">APPS</string>
    <string name="ksw_id7_car_info">Car Info</string>
    <string name="ksw_id7_communication">Communication</string>
    <string name="ksw_id7_ecu">Dashboard</string>
    <string name="ksw_id7_hd_video">HD Video</string>
    <string name="ksw_id7_hd_video_warning">Don\'t watch while driving</string>
    <string name="ksw_id7_music">Music</string>
    <string name="ksw_id7_navi">Navigation</string>
    <string name="ksw_id7_real_time_navi">Navigate for you in real time</string>
    <string name="ksw_id7_setting">Settings</string>
    <string name="ksw_id7_switch_to_carinfo_window">Display original car info</string>
    <string name="ksw_id8_efficient">EFFICIENT</string>
    <string name="ksw_id8_modus">MODUS</string>
    <string name="ksw_id8_personal">PERSONAL</string>
    <string name="ksw_id8_sport">SPORT</string>
    <string name="set_text2">Disable Video In Motion</string>
    <string name="string_sele_apk">Choose apk</string>
    <string name="string_sele_play_apk">Launcher\'s Music App</string>
    <string name="text_ahd_cam">Not Supported</string>
    <string name="text_ahd_cam1">AHD-1080P-30HZ</string>
    <string name="text_ahd_cam2">AHD-1080P-25HZ</string>
    <string name="text_ahd_cam3">AHD-720P-30HZ</string>
    <string name="text_ahd_cam4">AHD-720P-25HZ</string>
    <string name="text_ahd_cam5">AHD-720P-50HZ</string>
    <string name="text_ahd_cam6">CVBS-NTSC</string>
    <string name="text_ahd_cam7">CVBS-PAL</string>
    <string name="text_ahd_cam_select">AHD Camera Selection</string>
</resources>