<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_text1"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function_google_off" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_google_off"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function3" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_text3"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function4" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_text4"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function5" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_text5"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function_fcam" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_fcam"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function6" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_text6"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_function7" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_text7"/>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/cbox_bt" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/checkbox_selector" android:text="@string/function_bt"/>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/boot_record_mode"/>
        <RadioGroup android:id="@+id/boot_record_mode_radiogroup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdb_funbt2">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/boot_record_mode_radio1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/boot_record_mode_radio1"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/boot_record_mode_radio2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/boot_record_mode_radio2"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/boot_record_mode_radio3" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/boot_record_mode_radio3"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/function_text8"/>
        <com.wits.ksw.settings.utlis_view.RtlLinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp">
            <RadioGroup android:id="@+id/rdg_funxcjl" android:layout_width="match_parent" android:layout_height="wrap_content" android:checkedButton="@+id/rdb_funxcjl3">
                <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdb_funxcjl1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text9"/>
                <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdb_funxcjl2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text10"/>
                <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdb_funxcjl3" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text11"/>
            </RadioGroup>
            <TextView android:textSize="25sp" android:textColor="@drawable/text_selector" android:gravity="center" android:id="@+id/tv_seleAPk" android:background="@drawable/btn_dialog" android:paddingLeft="16dp" android:paddingTop="5dp" android:paddingRight="16dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_sele_apk"/>
        </com.wits.ksw.settings.utlis_view.RtlLinearLayout>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/function_text12"/>
        <RadioGroup android:id="@+id/rdg_funbt" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdb_funbt2">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdb_funbt1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text13"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdb_funbt2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text14"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/function_text15"/>
        <RadioGroup android:id="@+id/rdg_fungf" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdg_fungf1">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_fungf1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text16"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_fungf2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text17"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/function_text18"/>
        <RadioGroup android:id="@+id/rdg_360sx" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdg_fungf1">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_360sx1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text19"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_360sx2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text20"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/function_text21"/>
        <RadioGroup android:id="@+id/rdg_bgkz" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdg_fungf1">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_bgkz1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text22"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_bgkz2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text23"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/function_text24"/>
        <RadioGroup android:id="@+id/rdg_dawei" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdg_fungf1">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_dawei1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text25"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_dawei2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/function_text26"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlTextView android:textSize="25sp" android:textColor="@color/color1" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_ahd_cam_select"/>
        <RadioGroup android:id="@+id/rdg_Ahd" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:checkedButton="@+id/rdg_ahd0">
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd0" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd1" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam1"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd2" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam2"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd3" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam3"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd4" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam4"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd5" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam5"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd6" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam6"/>
            <com.wits.ksw.settings.utlis_view.RtlRadioButton android:textSize="20sp" android:textColor="@color/color1" android:id="@+id/rdg_ahd7" android:layout_width="match_parent" android:layout_height="wrap_content" android:button="@drawable/rad_btn_sel" android:text="@string/text_ahd_cam7"/>
        </RadioGroup>
        <com.wits.ksw.settings.utlis_view.RtlCheckBox android:textSize="25sp" android:textColor="#ffffff" android:gravity="center_vertical" android:id="@+id/cbox_sysXcjz" android:background="@drawable/id6_list_bg" android:focusable="true" android:layout_width="match_parent" android:layout_height="63dp" android:checked="false" android:button="@null" android:text="@string/set_text2" android:drawableLeft="@drawable/id6_checkbox_selector" android:paddingStart="30dp"/>
        <com.wits.ksw.settings.utlis_view.RtlLinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25sp" android:textColor="@drawable/text_selector" android:gravity="center" android:id="@+id/tv_selePlayAPk" android:background="@drawable/btn_dialog" android:paddingLeft="16dp" android:paddingTop="5dp" android:paddingRight="16dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:text="@string/string_sele_play_apk"/>
        </com.wits.ksw.settings.utlis_view.RtlLinearLayout>
    </LinearLayout>
</ScrollView>
