<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="horizontal" android:tag="layout/ksw_id7_main_page2_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/iv_arrow" android:layout_width="37dp" android:layout_height="58dp" android:src="@drawable/ksw_id7_main_card_left" android:layout_marginEnd="14dp"/>
    <LinearLayout android:id="@+id/ll_video_card" android:tag="binding_1" android:background="@drawable/ksw_id7_main_card_video_selector" android:nextFocusLeft="@+id/ll_set_card" android:nextFocusUp="@+id/ll_set_card" android:nextFocusDown="@+id/ll_computer_card" style="@style/ksw_id7_main_card_container">
        <TextView android:text="@string/ksw_id7_hd_video" style="@style/ksw_id7_main_card_title"/>
        <TextView android:id="@+id/tv_video" android:text="@string/ksw_id7_hd_video_warning" style="@style/ksw_id7_main_card_content"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_computer_card" android:tag="binding_2" android:background="@drawable/ksw_id7_main_card_computer_selector" android:nextFocusUp="@+id/ll_video_card" android:nextFocusDown="@+id/ll_car_card" style="@style/ksw_id7_main_card_container">
        <TextView android:text="@string/ksw_id7_ecu" style="@style/ksw_id7_main_card_title"/>
        <TextView android:tag="binding_3" style="@style/ksw_id7_main_card_content"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_car_card" android:tag="binding_4" android:background="@drawable/ksw_id7_main_card_car_selector" android:nextFocusUp="@+id/ll_computer_card" android:nextFocusDown="@+id/ll_file_card" style="@style/ksw_id7_main_card_container">
        <TextView android:text="@string/ksw_id7_car_info" style="@style/ksw_id7_main_card_title"/>
        <TextView android:text="@string/ksw_id7_switch_to_carinfo_window" style="@style/ksw_id7_main_card_content"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_file_card" android:tag="binding_5" android:background="@drawable/ksw_id7_main_card_file_selector" android:nextFocusUp="@+id/ll_car_card" android:nextFocusDown="@+id/ll_link_card" style="@style/ksw_id7_main_card_container">
        <TextView android:text="@string/id6_filemanager" style="@style/ksw_id7_main_card_title"/>
        <TextView android:text="@string/id6_filemanager_mess" style="@style/ksw_id7_main_card_content"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/ll_link_card" android:tag="binding_6" android:background="@drawable/ksw_id7_main_card_link_selector" android:nextFocusUp="@+id/ll_file_card" android:nextFocusDown="@+id/ll_link_card" style="@style/ksw_id7_main_card_container">
        <TextView android:text="@string/id6_shouj_hulian" style="@style/ksw_id7_main_card_title"/>
        <TextView android:text="@string/id6_shouj_hulian_mess" style="@style/ksw_id7_main_card_content"/>
    </LinearLayout>
    <ImageView android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ksw_id7_main_card_right" android:layout_marginStart="14dp"/>
</LinearLayout>
