<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/ll_container" android:tag="layout/fragment_pemp_modus_0" style="@style/id8_main_card_container">
    <ImageView android:tag="binding_1" style="@style/id8_pemp_main_card_size"/>
    <ImageView android:id="@+id/iv_mask" android:tag="binding_2" style="@style/id8_pemp_main_card_size"/>
    <LinearLayout style="@style/id8_pemp_main_card_container">
        <TextView android:text="@string/ksw_id8_modus" style="@style/id8_pemp_main_card_title"/>
        <ImageView android:background="@drawable/id8_main_icon_weather_line" style="@style/id8_pemp_main_card_divider"/>
        <TextView android:tag="binding_3" android:text="@string/ksw_id8_personal" style="@style/id8_pemp_main_card_desc"/>
        <TextView android:tag="binding_4" android:text="@string/ksw_id8_sport" style="@style/id8_pemp_main_card_desc"/>
        <TextView android:tag="binding_5" android:text="@string/ksw_id8_efficient" style="@style/id8_pemp_main_card_desc"/>
    </LinearLayout>
</RelativeLayout>
